# deps-typecheck

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  package.json  test.ts  testServer.ts  tsconfig.json  tsconfig.lib.json
app/: BUILD.bazel  test.ts  tsconfig.lib.json
app/subapp/: BUILD.bazel  index.ts
dir/: BUILD.bazel  package.json  requestWithFoo.d.ts  requestWithSpan.d.ts  testServer.ts  tsconfig.json
