load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_config(
    name = "tsconfig",
    src = "tsconfig.lib.json",
    deps = ["//:tsconfig"],
)

ts_project(
    name = "lib",
    srcs = glob(["**/*.ts"]),
    declaration = True,
    tsconfig = "tsconfig",
    deps = ["@npm//@types/node"],
)
