load("@npm//@bazel/typescript:index.bzl", "ts_library", "ts_project")

package(default_visibility = ["//visibility:public"])

# both of these build

# FAILS TO BUILD, needs @npm//@types/node
ts_project(
    name = "test_ts_project",
    srcs = ["test.ts"],
    declaration = True,
    tsconfig = "//:tsconfig.json",
    deps = [
        # "@npm//@types/node",
        "@npm//apollo-server",
    ],
)

# BUILDS SUCCESSFULLY
ts_library(
    name = "test_ts_library",
    srcs = ["test.ts"],
    deps = [
        "@npm//apollo-server",
    ],
)
