load("@build_bazel_rules_nodejs//:index.bzl", "js_library", "nodejs_binary")
load("@npm//@bazel/typescript:index.bzl", "ts_library", "ts_project")

exports_files(["tsconfig.json"])

package(default_visibility = ["//visibility:public"])

js_library(
    name = "request_with_foo",
    srcs = ["requestWithFoo.d.ts"],
)

exports_files([
    "requestWithFoo.d.ts",
])

js_library(
    name = "a",
    srcs = ["a.d.ts"],
)

ts_project(
    name = "test_server",
    srcs = [
        "testServer.ts",
        "//dir:requestWithFoo.d.ts",
    ],
    declaration = True,
    tsconfig = "//dir:tsconfig.json",
    deps = [
        ":a",
        "@npm//@types/express",
        "@npm//@types/node",
    ],
)

nodejs_binary(
    name = "bin",
    data = [
        ":test_server",
    ],
    entry_point = ":testServer.ts",
)
